--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ div#colonne2 {
     float: right;
     width: 300px;
     margin-left: 10px;
+	border: 1px solid #555;
 }
 div#centre {
     overflow: hidden;
